[package]
name = "tracker-collector"
version = "0.1.0"
edition = "2021"
authors = [ "liulifox233 <liulifox@qq.com>" ]
license = "MIT"
registry = "https://github.com/liulifox233/tracker-collector"

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.4.2", features=['http'] }
worker-macros = { version="0.4.2", features=['http'] }
console_error_panic_hook = { version = "0.1.1" }
serde_yaml = "0.9.34"
serde = "1.0.215"
web-sys = "0.3.76"
serde_json = "1.0.133"
tracing-web = "0.1.3"
tracing-subscriber = { version = "0.3.19", features = ["json", "time"] }
tracing = "0.1.41"
time = { version = "0.3", features=['wasm-bindgen'] }
futures = "0.3.31"
tokio-tungstenite-wasm = "0.3.1"
